@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<RootNamespace>VionheartScarlet</RootNamespace>
-		<Version>1.2.0</Version>
+		<Version>1.3.0</Version>
 		<IsNickelMod>True</IsNickelMod>
 		<IncludedModProjectPaths>i18n;assets</IncludedModProjectPaths>
 		<LangVersion>12.0</LangVersion>
