@@ -1,6 +1,6 @@
 {
   "UniqueName": "VionheartScarlet",
-  "Version": "1.2.0",
+  "Version": "1.3.0",
   "Author": "XyrilP.",
   "Description": "Scarlet joins the Cobalt crew!",
   "RequiredApiVersion": "1.5.7",
